--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
 
     <div class="bottom">
       <div class="bottom-container">
-        <input
-          type="range"
-          name="range"
-          id="myProgressBar"
-          value="0"
-          min="0"
-          max="100"
-        />
+        <div class="time-song">
+          <p class="current-time"><span></span>:<span></span></p>
+          <input type="range" name="range" id="myProgressBar" value="0" />
+          <p class="end-time"><span></span>:<span></span></p>
+        </div>
         <div class="bottom-item">
           <div class="songBanner">
             <img src="./assets/img/songLogo/Nt6v.gif" class="gif" alt="" />
