--- a/index.html
+++ b/index.html
@@ -25,13 +25,22 @@
     <div class="container">
       <h1>Best of Music - My Sadness</h1>
       <div class="songList"></div>
+      <br /><br />
+      <h1>Recommended</h1>
+      <div class="recommended"></div>
     </div>
 
     <div class="bottom">
       <div class="bottom-container">
         <div class="time-song">
           <p class="current-time"><span></span>:<span></span></p>
-          <input type="range" name="range" id="myProgressBar" value="0" />
+          <input
+            type="range"
+            name="range"
+            id="myProgressBar"
+            value="0"
+            step="0.0001"
+          />
           <p class="end-time"><span></span>:<span></span></p>
         </div>
         <div class="bottom-item">
