--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/img/brand/spotify.png"
+    />
     <script
       src="https://kit.fontawesome.com/dc2ef59ada.js"
       crossorigin="anonymous"
